# OpenCV

./: CMakeLists.txt  app.cpp  app.h  main.cpp
include/detect/: detect.h
src/: CMakeLists.txt
src/detect/: detect.cpp
tests/: CMakeLists.txt  temp.test.cpp
